[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "hospitality-multi-agent"
version = "0.1.0"
description = "Hospitality Multi-Agent Intelligence System — LangGraph multi-pod demo"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
# Makes both `src` and `agents` importable after `pip install -e .`
# Each agent pod runs `pip install -e /app` in its Docker entrypoint to get clean imports.
where = ["."]
include = ["src*", "agents*"]
